--- a/装机必备.md
+++ b/装机必备.md
@@ -31,14 +31,16 @@
 
   - 优化设置
 
-    > https://blog.csdn.net/qq_28867949/article/details/78823232
-    >
-    > https://blog.csdn.net/qq_32454537/article/details/81905117
+    [优化配置1](https://blog.csdn.net/qq_28867949/article/details/78823232)
 
-  - 自定注释
+    [优化配置2](https://blog.csdn.net/qq_32454537/article/details/81905117)
 
-    > https://blog.csdn.net/u014044812/article/details/76577479
-    
+    [javap](<https://blog.csdn.net/u013490280/article/details/84112931>)
+
+    [自定义注释](https://blog.csdn.net/u014044812/article/details/76577479)
+
+    [Mac Spring Boot启动速度](https://blog.csdn.net/MR_salted_fish/article/details/78585003)
+
 - 有道翻译
 
 - 微信
