--- a/shell/学习笔记.md
+++ b/shell/学习笔记.md
@@ -153,8 +153,8 @@ echo "End of script..."
 
 - 删除文件的第一到第五行，并且把删除的行显示出来
 
-```
-sed -e -n '/正则/p' file
+```shell
+sed -n -e '/正则/p' file
 ```
 
 - 打印和`正则表达式`匹配的行
@@ -199,7 +199,7 @@ awk '{print " user : "$1" name : "$2"  "}'
 
 - 想在输入时插入一些东西需要用`""`扩起来，变量也需要用`""`扩起来
 
-```shell
+```bash
 BEGIN {
     print "How many people with nologin"
 }
