--- a/database/日常使用.md
+++ b/database/日常使用.md
@@ -51,3 +51,20 @@
 ## 视图
 
 - CREATE VIEW 视图名 AS 查询逻辑
+
+## [索引原理](<https://blog.csdn.net/tongdanping/article/details/79878302>)
+
+## 索引 order by
+
+- https://www.cnblogs.com/wangxusummer/p/5329813.html
+- <https://www.cnblogs.com/morewindows0/p/9225638.html>
+
+## [隔离级别](<http://blog.chinaunix.net/uid-14010457-id-3956842.html>)
+
+## [SQL优化](<https://zhuanlan.zhihu.com/p/48385127>)
+
+## [MySQL原理](<https://dbaplus.cn/news-155-1531-1.html>)
+
+## [Explain详解](<https://www.jianshu.com/p/ea3fc71fdc45>)
+
+## [联表查询详解](https://blog.csdn.net/Jintao_Ma/article/details/51260458)
