--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -286,3 +286,41 @@ graph TD
 - 内网和外网通信需要NAT路由器
 
 ### 多协议标记转换MPLS
+
+## 运输层
+
+### 端口号
+
+- 运输层根据端口号把收到的数据运输到应用层
+- 49152～65535为客户端端口号，即客户进程运行时才动态选择
+
+### UDP
+
+- 无连接
+- 尽最大努力交付
+- 面向报文，对应用层交付对报文添加首部后原样传输
+- 没有拥塞控制
+- 支持一对一，一对多，多对一，多对多
+- 首部8字节，TCP20字节
+
+### TCP
+
+- 面向连接
+- 可靠服务
+- 全双工
+- 停止等待协议
+  - 发送分组后需要接收方确定
+  - 信道利用率低下
+- TCP首部的字段含义代表工作原理
+- 连续ARQ协议
+  - 滑动窗口的概念
+- 超时重传采用自适应算法
+- 拥塞控制的方法
+  - 慢开始：开始设置较小的拥塞窗口，根据接收方的确认收到次数，指数增长
+  - 拥塞避免：根据传输轮次将拥塞窗口线性增长
+  - 快重传：丢失时立即重传
+  - 快恢复：在收到三个确认时，把窗口设为1/2
+- TCP链接的建立与释放
+  - 三次握手
+  - 四次握手
+  - 都是为了防止失效重传
