--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -324,3 +324,45 @@ graph TD
   - 三次握手
   - 四次握手
   - 都是为了防止失效重传
+
+## 应用层
+
+### 域名系统DNS
+
+- 递归查询：由上级服务器代替递归查询
+- 迭代查询：上级服务器告知要查询哪个服务器，但并不代替查询
+
+### FTP
+
+- 文件传输
+- TFTP
+  - 不满512字节为结束标志
+
+### 远程终端协议TELNET
+
+- 即在远程不同终端间转换
+
+### 万维网
+
+- 使用HTTP协议
+- 统一资源定位符URL
+- 在三次握手中，浏览器在第三次握手时把HTTP请求报文发送给服务器
+- HTTP/1.1主要特性时持续链接
+
+### 电子邮件
+
+- SMTP发送协议
+
+- POP3读取协议
+
+  ```mermaid
+  graph TD
+  发送方代理 --> 发送邮件服务器
+  发送邮件服务器 --> 接受邮件服务器
+  接受邮件服务器 --> 接收方代理
+  ```
+
+### 简单网络管理协议SNMP
+
+### P2P协议
+
