--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -366,3 +366,26 @@ graph TD
 
 ### P2P协议
 
+## 网络安全
+
+### 主动攻击方式
+
+- 篡改
+- 恶意程序
+- 拒绝服务DOS
+
+### 密码体制
+
+- 对称加密
+- 公钥密码体制
+
+### 数字签名
+
+- 报文鉴别：接受者确认该报文是发送者发送的
+- 报文的完整性：接受者确信收到的数据和发送者发送的一样
+- 不可否问：发送者不能抵赖对报文的签名
+
+### 运输层安全协议
+
+- SSL介于应用层和传输层之间
+
