--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -25,7 +25,10 @@
 - 开启Docker服务
 
   - `sudo service docker start`
-
+- 开机启动
+  - `systemctl enable docker`
+- 添加至指定分组
+  - `将指定用户添加到用户组`
 - 加速镜像
 
   - `mkdir /etc/docker/daemon.json`
