--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -7,6 +7,15 @@
 - 安装
   - `sudo yum install yarn`
 
+## node
+- 安装`yarn`后自然会有node
+- npm 升级
+ - `npm install -g npm`
+- node 升级
+ - `sudo npm cache clean -f`
+ - `sudo npm install -g n`
+ - `sudo n latest`
+
 ## docker
 
 - 安装必要系统工具
