--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -37,7 +37,7 @@
 - 开机启动
   - `systemctl enable docker`
 - 添加至指定分组
-  - `将指定用户添加到用户组`
+  - `usermod -aG docker your_username`
 - 加速镜像
 
   - `mkdir /etc/docker/daemon.json`
