--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -30,7 +30,7 @@
 
   - `mkdir /etc/docker/daemon.json`
 
-  - 给`daemon.json`添加如下文本`{"registry-mirrors": ["https://wghlmi3i.mirror.aliyuncs.codm"]}`
+  - 给`daemon.json`添加如下文本`{"registry-mirrors": ["https://4g87pcpt.mirror.aliyuncs.com"]}`
 
     
 
