--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -35,8 +35,10 @@
 
   - `sudo service docker start`
 - 开机启动
+  
   - `systemctl enable docker`
 - 添加至指定分组
+  
   - `usermod -aG docker your_username`
 - 加速镜像
 
@@ -44,15 +46,16 @@
 
   - 给`daemon.json`添加如下文本`{"registry-mirrors": ["https://4g87pcpt.mirror.aliyuncs.com"]}`
 
-    
 
-    
+## minikube
 
-    
 
-    
 
-    
+​    
+
+​    
+
+​    
 
 
 
