--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -44,14 +44,86 @@
 
   - `mkdir /etc/docker/daemon.json`
 
-  - 给`daemon.json`添加如下文本`{"registry-mirrors": ["https://4g87pcpt.mirror.aliyuncs.com"]}`
-
-
-## minikube
+  - 给`daemon.json`添加如下文本`{"registry-mirrors": ["加速IP地址"]}`
 
 
 
-​    
+##     Git
+
+- 安装
+
+yum install -y git
+
+## JDK
+
+- 安装
+
+yum install -y java-1.8.0-openjdk.x86_64 java-1.8.0-openjdk-devel.x86_64
+
+## PM2
+
+- 安装
+
+npm -g i pm2
+
+## Nginx
+
+- 安装
+
+yum install -y nginx
+
+- 启动
+
+systemctl start nginx
+
+- 开机启动
+
+systemctl enable nginx
+
+## 数据库中间件（MySQL）
+
+- docker-compose.yml
+
+```yaml
+version: '3'
+services:
+  mysql:
+    image: mysql:5.7
+    container_name: mysql5.7
+    restart: on-failure
+    ports:
+    - '3306:3306'
+    environment:
+    # 这里自定义一个密码
+    - MYSQL_ROOT_PASSWORD=password
+    volumes:
+    - data:/var/lib/mysql
+    # 开启二进制日志
+    command: [
+      "--log-bin=mysql-bin",
+      "--server-id=1"
+    ]
+volumes:
+  data:
+```
+
+## 缓存中间件（Redis）
+
+- docker-compose.yml
+
+```yaml
+version: '3'
+services:
+  redis:
+    image: redis:4
+    container_name: redis4
+    ports:
+    - '6379:6379'
+    volumes:
+    - data:/data
+volumes:
+  data:
+```
 
 ​    
 
