--- a/computer/《深入理解计算机系统》.md
+++ b/computer/《深入理解计算机系统》.md
@@ -247,6 +247,13 @@ dest + (d[i] + d[i+1])
 
 ## 第七章 连接
 
+### 编译程序
+
+- 将代码翻译成ASCII码中间文件i
+- 将文件i翻译成ASCII码汇编文件s
+- 将文件s转换为可重定位目标文件o
+- 链接器将文件o链接起来生成可执行文件
+
 ### 链接
 
 - 将不同的C文件编译链接起来成为一个可执行的文件
