--- a/typescript/基本知识.md
+++ b/typescript/基本知识.md
@@ -1,20 +1,301 @@
 ## 基本类型
 
 - boolean
+
 - number
+
 - string
+
 - array
+  
   - `number[]` 或者 `Array<number>`
+  
 - tuple
+  
   - `let x: [string, number];`
+  
 - enum
+
 - any
+
 - void
+  
   - 只可分配`null`或`undefined`
+  
 - null和undefined
+  
   - 是所有类型的子类型
+  
 - never
+  
   - 函数永远没有返回值
+  
 - object
-- 类型断言
-  - `let strLength: number = (someValue as string).length;`
+
+### 类型断言
+
+   `let strLength: number = (someValue as string).length;`
+
+## 变量声明
+
+### var和let的区别
+
+局部作用域问题
+
+打印10个10（改成let即可）
+
+```typescript
+for (var i = 0; i < 10; i++) {
+    setTimeout(function() { console.log(i); }, 100 * i);
+}
+```
+
+按顺序打印
+
+```typescript
+for (var i = 0; i < 10; i++) {
+    // capture the current state of 'i'
+    // by invoking a function with its current value
+    (function(i) {
+        setTimeout(function() { console.log(i); }, 100 * i);
+    })(i);
+}
+```
+
+## 接口
+
+### 普通声明
+
+```typescript
+interface LabeledValue {
+    label: string;
+}
+```
+
+### 可选声明
+
+```typescript
+interface SquareConfig {
+    color?: string;
+    width?: number;
+}
+```
+
+### 不可变字段
+
+```typescript
+interface Point {
+    readonly x: number;
+    readonly y: number;
+}
+```
+
+### 方法字段声明
+
+```typescript
+interface SearchFunc {
+    (source: string, subString: string): boolean;
+}
+```
+
+### 下标索引声明
+
+```typescript
+interface StringArray {
+    [index: number]: string;
+}
+
+let myArray: StringArray;
+myArray = ["Bob", "Fred"];
+
+let myStr: string = myArray[0];
+```
+
+## 类
+
+- 可在构造函数中定义类属性
+
+- 访问者写法
+
+  ```typescript
+  const fullNameMaxLength = 10;
+  
+  class Employee {
+      private _fullName: string;
+  
+      get fullName(): string {
+          return this._fullName;
+      }
+  
+      set fullName(newName: string) {
+          if (newName && newName.length > fullNameMaxLength) {
+              throw new Error("fullName has a max length of " + fullNameMaxLength);
+          }
+          
+          this._fullName = newName;
+      }
+  }
+  
+  let employee = new Employee();
+  employee.fullName = "Bob Smith";
+  if (employee.fullName) {
+      console.log(employee.fullName);
+  }
+  ```
+
+## 函数
+
+  ### 声明方式
+
+```typescript
+// Named function
+function add(x, y) {
+    return x + y;
+}
+
+// Anonymous function
+let myAdd = function(x, y) { return x + y; };
+
+// 箭头函数
+le t myAdd = (x,y) => x + y;
+```
+
+### 可选参数和默认参数
+
+```typescript
+function buildName(firstName: string, lastName?: string) {
+    if (lastName)
+        return firstName + " " + lastName;
+    else
+        return firstName;
+}
+
+let result1 = buildName("Bob");                  // works correctly now
+let result2 = buildName("Bob", "Adams", "Sr.");  // error, too many parameters
+let result3 = buildName("Bob", "Adams");
+
+function buildName(firstName: string, lastName = "Smith") {
+    return firstName + " " + lastName;
+}
+
+let result1 = buildName("Bob");                  // works correctly now, returns "Bob Smith"
+let result2 = buildName("Bob", undefined);       // still works, also returns "Bob Smith"
+let result3 = buildName("Bob", "Adams", "Sr.");  // error, too many parameters
+let result4 = buildName("Bob", "Adams");  
+```
+
+### 多个参数
+
+```typescript
+function buildName(firstName: string, ...restOfName: string[]) {
+    return firstName + " " + restOfName.join(" ");
+}
+
+let buildNameFun: (fname: string, ...rest: string[]) => string = buildName;
+```
+
+## 泛型
+
+### 类型信息的使用
+
+```typescript
+class BeeKeeper {
+    hasMask: boolean;
+}
+
+class ZooKeeper {
+    nametag: string;
+}
+
+class Animal {
+    numLegs: number;
+}
+
+class Bee extends Animal {
+    keeper: BeeKeeper;
+}
+
+class Lion extends Animal {
+    keeper: ZooKeeper;
+}
+
+function createInstance<A extends Animal>(c: new () => A): A {
+    return new c();
+}
+
+createInstance(Lion).keeper.nametag;  // typechecks!
+createInstance(Bee).keeper.hasMask;   
+```
+
+## 枚举
+
+### 枚举运行时实际时对象
+
+```typescript
+enum E {
+    X, Y, Z
+}
+// can actually be passed around to functions
+
+function f(obj: { X: number }) {
+    return obj.X;
+}
+
+// Works, since 'E' has a property named 'X' which is a number.
+f(E);
+```
+
+### 遍历枚举key
+
+```typescript
+enum LogLevel {
+    ERROR, WARN, INFO, DEBUG
+}
+
+/**
+ * This is equivalent to:
+ * type LogLevelStrings = 'ERROR' | 'WARN' | 'INFO' | 'DEBUG';
+ */
+type LogLevelStrings = keyof typeof LogLevel;
+
+function printImportant(key: LogLevelStrings, message: string) {
+    const num = LogLevel[key];
+    if (num <= LogLevel.WARN) {
+       console.log('Log level key is: ', key);
+       console.log('Log level value is: ', num);
+       console.log('Log level message is: ', message);
+    }
+}
+printImportant('ERROR', 'This is a message');
+```
+
+### 常量枚举和计算枚举
+
+```typescript
+enum FileAccess {
+    // constant members
+    None,
+    Read    = 1 << 1,
+    Write   = 1 << 2,
+    ReadWrite  = Read | Write,
+    // computed member
+    G = "123".length
+}
+```
+
+## 类型推断
+
+### 基本的时机
+
+- 初始化变量、成员
+- 设置参数默认值
+- 确定方法返回类型
+
+### 数组推断
+
+- 最公共的类型来满足数组中各个下标
+- 可显示手动设置
+
+### 上下文推断
+
+- 在给函数赋值时，智能推断上下文参数
