--- a/typescript/基本知识.md
+++ b/typescript/基本知识.md
@@ -299,3 +299,24 @@ enum FileAccess {
 ### 上下文推断
 
 - 在给函数赋值时，智能推断上下文参数
+
+## 类型兼容
+
+### 函数比较
+
+- 参数兼容
+
+### 枚举比较
+
+- 对于数字兼容，来自不同的枚举是不兼容的
+
+### 类比较
+
+- 只考虑实例部分
+- 不考虑静态部分和构造函数
+
+### 泛型比较
+
+- 在没有用到类型参数时，只考虑成员结构是否相等
+- 用到类型参数时，还需考虑类型参数是否相同
+
