--- a/typescript/基本知识.md
+++ b/typescript/基本知识.md
@@ -320,3 +320,7 @@ enum FileAccess {
 - 在没有用到类型参数时，只考虑成员结构是否相等
 - 用到类型参数时，还需考虑类型参数是否相同
 
+## 高级类型
+
+[自己看吧😊](https://www.typescriptlang.org/docs/handbook/advanced-types.html#union-types)
+
