--- a/typescript/基本知识.md
+++ b/typescript/基本知识.md
@@ -30,6 +30,7 @@
   
   - 函数永远没有返回值
   
+- symbols
 - object
 
 ### 类型断言
@@ -323,4 +324,158 @@ enum FileAccess {
 ## 高级类型
 
 [自己看吧😊](https://www.typescriptlang.org/docs/handbook/advanced-types.html#union-types)
+
+## 符号（Symbol）
+
+参考[ECMAScript 2015](https://developer.mozilla.org/en-US/docs/Web/JavaScript/New_in_JavaScript/ECMAScript_2015_support_in_Mozilla)
+
+## 迭代器
+
+for..of和for..in区别
+
+```typescript
+let list = [4, 5, 6];
+
+for (let i in list) {
+    console.log(i); // "0", "1", "2",
+}
+
+for (let i of list) {
+    console.log(i); // "4", "5", "6"
+}
+```
+
+## 装饰器
+
+### 类装饰器
+
+在编译时对构造函数修改
+
+```typescript
+function sealed(constructor: Function) {
+    Object.seal(constructor);
+    Object.seal(constructor.prototype);
+}
+
+@sealed
+class MyClass {
+    a: number = 0;
+    b: string = "hello";
+}
+
+var obj = new MyClass();
+// obj.c = true; // 编译报错
+```
+
+### 方法装饰器
+
+对方法做修改，只在解释类的对应方法时被调用一次，装饰器方法的调用只会在加载代码时执行一次，调用被装饰的方法不会出发装饰器方法
+
+```typescript
+function methodDecorator(param1: boolean, param2?: string) {
+    return function (target: any, propertyKey: string, descriptor: PropertyDescriptor) {
+        console.log(param1 + ", " + param2 + ", " + target + ", " + propertyKey + ", " + JSON.stringify(descriptor));
+    };
+}
+
+class MyClass {
+    @methodDecorator(true, "this is static")
+    public static sFunc(): void {
+        console.log("call static method");
+    }
+
+    @methodDecorator(false)
+    public func(): void {
+        console.log("call method");
+    }
+}
+
+MyClass.sFunc();
+MyClass.sFunc();
+
+var obj = new MyClass();
+obj.func();
+obj.func();
+
+false, undefined, [object Object], func, {"writable":true,"enumerable":true,"configurable":true}
+true, this is static, function MyClass() {
+    }, sFunc, {"writable":true,"enumerable":true,"configurable":true}
+call static method
+call static method
+call method
+call method
+```
+
+### 访问器
+
+类似方法装饰器
+
+```typescript
+function methodDecorator(param1: boolean, param2?: string) {
+    return function (target: any, propertyKey: string, descriptor: PropertyDescriptor) {
+        console.log(param1 + ", " + param2 + ", " + target + ", " + propertyKey + ", " + JSON.stringify(descriptor));
+    };
+}
+
+class MyClass {
+    private static _myName: string;
+
+    @methodDecorator(true, "this is static")
+    public static set myName(value: string) {
+        this._myName = value;
+    }
+
+    public static get myName(): string {
+        return this._myName;
+    }
+
+    private _age: number;
+
+    @methodDecorator(false)
+    public set age(value: number) {
+        this._age = value;
+    }
+
+    public get age(): number {
+        return this._age;
+    }
+}
+
+MyClass.myName = "hello";
+console.log(MyClass.myName);
+
+var obj = new MyClass();
+obj.age = 28;
+console.log(obj.age);
+
+1 false, undefined, [object Object], age, {"enumerable":true,"configurable":true}
+2 true, this is static, function MyClass() {
+3     }, myName, {"enumerable":true,"configurable":true}
+4 hello
+5 28
+```
+
+### 参数装饰器
+
+```typescript
+function paramDecorator(target: Object, propertyKey: string | symbol, parameterIndex: number) {
+    console.log(target + ", " + <any> propertyKey + ", " + parameterIndex);
+}
+
+class MyClass {
+    public func(@paramDecorator a: number, @paramDecorator b: string = "hello", @paramDecorator c?: boolean): void {
+        console.log("call method");
+    }
+}
+
+var obj = new MyClass();
+obj.func(1);
+obj.func(2);
+
+1 [object Object], func, 2
+2 [object Object], func, 1
+3 [object Object], func, 0
+4 call method
+5 call method
+```
 
