--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -1,4 +1,4 @@
-## yarn
+## Yarn
 
 - 设置仓库
   - `curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo | sudo tee /etc/yum.repos.d/yarn.repo`
@@ -7,7 +7,7 @@
 - 安装
   - `sudo yum install yarn`
 
-## node
+## Node
 - 安装`yarn`后自然会有`node`
 - npm 升级
   - `npm install -g npm`
@@ -16,7 +16,7 @@
   - `sudo npm install -g n`
   - `sudo n latest`
 
-## docker
+## Docker
 
 - 安装必要系统工具
 
