--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -1,11 +1,26 @@
+## Yum
+
+[ubantu](https://blog.csdn.net/qq_43029747/article/details/94874442)
+
 ## Yarn
 
 - 设置仓库
-  - `curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo | sudo tee /etc/yum.repos.d/yarn.repo`
+
+  ```shell
+  curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo | sudo tee /etc/yum.repos.d/yarn.repo
+  ```
+
 - 设置node
-  - `curl --silent --location https://rpm.nodesource.com/setup_<node版本>.x | sudo bash -`
+
+  ```shell
+  curl --silent --location https://rpm.nodesource.com/setup_13.x | sudo bash -
+  ```
+
 - 安装
-  - `sudo yum install yarn`
+
+  ```shell
+  sudo yum install -y yarn
+  ```
 
 ## Node
 - 安装`yarn`后自然会有`node`
@@ -18,67 +33,122 @@
 
 ## Docker
 
-- 安装必要系统工具
+- 安装
 
-  - `sudo yum install -y yum-utils device-mapper-persistent-data lvm2`
-
-- 添加软件信息
-
-  - `sudo yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo`
-
-- 更新并安装Docker-CE
-
-  - `sudo yum makecache fast`
-  - `sudo yum -y install docker-ce`
+  ```
+  curl -fsSL https://get.docker.com -o get-docker.sh
+  sudo sh get-docker.sh
+  ```
 
 - 开启Docker服务
 
-  - `sudo service docker start`
+  ```shell
+  sudo service docker start
+  ```
+
 - 开机启动
-  
-  - `systemctl enable docker`
+
+  ```shell
+  systemctl enable docker
+  ```
+
 - 添加至指定分组
-  
-  - `usermod -aG docker your_username`
+
+  ```shell
+  usermod -aG docker your_username
+  ```
+
 - 加速镜像
 
-  - `mkdir /etc/docker/daemon.json`
+  ```shell
+  mkdir /etc/docker/daemon.json
+  ```
 
   - 给`daemon.json`添加如下文本`{"registry-mirrors": ["加速IP地址"]}`
 
+## Docker-compose
 
+- 下载
+
+  ```shell
+  sudo curl -L "https://github.com/docker/compose/releases/download/1.25.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  ```
+
+- 分配权限
+
+  ```shell
+  sudo chmod +x /usr/local/bin/docker-compose
+  ```
+
+## GitLab
+
+[安装](https://www.jianshu.com/p/0b4f27db7cd4)
+
+[修改端口](https://blog.csdn.net/wangyy130/article/details/85633303)
+
+## Gitea
+
+```shell
+docker run -d --name=gitea -p 10022:22 -p 3000:3000 -v /var/lib/gitea:/data gitea/gitea:latest
+```
 
 ##     Git
 
-- 安装
-
+```shell
 yum install -y git
+```
 
 ## JDK
 
-- 安装
+[安装](https://www.cnblogs.com/52lxl-top/p/9877202.html)
 
-yum install -y java-1.8.0-openjdk.x86_64 java-1.8.0-openjdk-devel.x86_64
+## Maven
+
+[安装](https://yq.aliyun.com/articles/655831)
+
+## Ngnix
+
+[安装](https://www.cnblogs.com/songxingzhu/p/8568432.html)
 
 ## PM2
 
-- 安装
-
+```shell
 npm -g i pm2
+```
 
-## Nginx
+## 设置
 
-- 安装
+- 关闭防火墙
 
-yum install -y nginx
+  ```
+  // 停止 firewall 服务
+  systemctl stop firewalld.service
+  // 禁止开机启动
+  systemctl disable firewalld.service
+  
+  // 安装 iptables
+  yum install -y iptables
+  ```
 
-- 启动
+- 开启网络
 
-systemctl start nginx
+  ```shell
+  vim /etc/sysconfig/network-scripts/{网卡名}
+  修改NOBOOT=yes
+  service network restart
+  ```
 
-- 开机启动
+- 查看网络地址
 
-systemctl enable nginx
+  ```shell
+  ip addr
+  ```
+
+- [静态ip](https://blog.csdn.net/qq_38138069/article/details/80982527)
+
+- [时间同步1](https://blog.csdn.net/a_drjiaoda/article/details/89674468)
+
+- [时间同步2](https://blog.csdn.net/vah101/article/details/91868147)
 
 ## 数据库中间件（MySQL）
 
@@ -89,16 +159,14 @@ version: '3'
 services:
   mysql:
     image: mysql:5.7
-    container_name: mysql5.7
+    container_name: mysql
     restart: on-failure
     ports:
     - '3306:3306'
     environment:
-    # 这里自定义一个密码
     - MYSQL_ROOT_PASSWORD=password
     volumes:
     - data:/var/lib/mysql
-    # 开启二进制日志
     command: [
       "--log-bin=mysql-bin",
       "--server-id=1"
@@ -115,8 +183,8 @@ volumes:
 version: '3'
 services:
   redis:
-    image: redis:4
-    container_name: redis4
+    image: redis
+    container_name: redis
     ports:
     - '6379:6379'
     volumes:
