--- a/operations/常用软件运维.md
+++ b/operations/常用软件运维.md
@@ -1,3 +1,6 @@
+## Jira
+[jira](https://blog.csdn.net/bacteriumX/article/details/86624117)
+
 ## Confluence
 [confluence](https://www.cnblogs.com/mxmbk/p/9347359.html)
 
