--- a/operations/服务安装.md
+++ b/operations/服务安装.md
@@ -19,7 +19,7 @@
       --env=DRONE_USER_CREATE=username:shenjies88,admin:true \
       --publish=10080:80 \
       --publish=10443:443 \
-      --restart=always \
+      --restart=unless-stopped \
       --detach=true \
       --name=drone \
       drone/drone:1
@@ -34,10 +34,10 @@
       -e DRONE_RPC_PROTO=http \
       -e DRONE_RPC_HOST=192.168.56.20:10080 \
       -e DRONE_RPC_SECRET=ecbd6ce84f5fd5ffd7d77c968a11d370 \
-      -e DRONE_RUNNER_CAPACITY=1 \
+      -e DRONE_RUNNER_CAPACITY=2 \
       -e DRONE_RUNNER_NAME=${HOSTNAME} \
       -p 4000:3000 \
-      --restart always \
+      --restart unless-stopped \
       --name runner \
       drone/drone-runner-docker:1
     ```
@@ -46,18 +46,57 @@
 ### Gitea
 
   - ```shell
-    docker run -d --name=gitea -p 10022:22 -p 3000:3000 -v gitea_data:/data gitea/gitea
+    docker run -d --name=gitea --restart unless-stopped -p 10022:22 -p 3000:3000 -v gitea_data:/data gitea/gitea
     ```
 
+  - shenjies88
+  - Zhuzhu123456.
 
 ### MySQL
 
   - 3306:3306
+
   - root
+
   - password
+
+  - ```shell
+    docker run --name mysql -e MYSQL_ROOT_PASSWORD=password -v mysql_data:/var/lib/mysql -p 3306:3306 -d --restart=unless-stopped mysql:5.7 --log-bin=mysql-bin --server-id=1
+    ```
+
 
 ### Rancher
 
   - ```shell
-    sudo docker run -d --restart=unless-stopped -p 80:80 -p 443:443 rancher/rancher:v2.3.2
+    sudo docker run -d --restart=unless-stopped -p 80:80 -p 443:443 rancher/rancher
     ```
+
+- ```shell
+  sudo docker run -d --privileged --restart=unless-stopped --net=host -v k8s_data:/etc/kubernetes -v /var/run:/var/run rancher/rancher-agent:v2.3.2 --server https://192.168.56.20 --token 66xnqkgpq5b8z6swzkg9xbnz7vjlmgg284zhbm2hnq8hbqwskwl8ns --ca-checksum 681815048cb978b0ec6ef225b8b8d8855d4f78fea674ace92674f5fa817e25d7 --etcd --controlplane --worker
+  ```
+
+### Jenkins
+
+```shell
+docker run --name jenkins -u root -d -p 8080:8080 -p 50000:50000 -v jenkins-data:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock jjenkins
+```
+
+### GitLab
+
+```shell
+sudo docker run --detach   --hostname 192.168.56.20   --publish 30443:443 --publish 30080:30080 --publish 30022:22   --name gitlab   --restart always   -v gitlab-config:/etc/gitlab   -v gitlab-logs:/var/log/gitlab   -v gitlab-data:/var/opt/gitlab   gitlab/gitlab-ce:latest
+```
+
+- root
+- 12345678a
+
+### GitLab-Runner
+
+```shell
+docker run -d --name gitlab-runner --restart always \
+  -v gitlab-runner-config:/etc/gitlab-runner \
+  -v /var/run/docker.sock:/var/run/docker.sock \
+  gitlab/gitlab-runner:latest
+```
+
+### Kubectl
