--- a/operations/服务安装.md
+++ b/operations/服务安装.md
@@ -78,7 +78,7 @@
 ### Jenkins
 
 ```shell
-docker run --name jenkins -u root -d -p 8080:8080 -p 50000:50000 -v jenkins-data:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock jjenkins
+docker run --name jenkins --restart always -u root -d -p 8080:8080 -p 50000:50000 -v jenkins-data:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock jenkins:2.60.3
 ```
 
 ### GitLab
