--- a/装机必备.md
+++ b/装机必备.md
@@ -3,8 +3,8 @@
 - Java
 - Maven
 - Node
-- npm
-- pm2
+- Npm
+- Pm2
 - PostMan
 - IDEA
 - VS Code
@@ -15,7 +15,6 @@
 - TeamViewer
 - DBeaver
 - XMind
-- Alfred
 
 ## 日常
 
