--- a/书籍.md
+++ b/书籍.md
@@ -21,8 +21,9 @@
 - 《Maven实战》（中）许晓斌
 - 《五分钟玩转kubernetes》（中）loudMan
 - 《Kubernetes权威指南》
+- 《Kafka权威指南》Neha Narkhede
 
-### 后端
+### Java
 
 - 《Java编程思想》（美）Bruce Eckel
 - 《精通正则表达式》（美） Jeffrey E·F·Friedl
