--- a/书籍.md
+++ b/书籍.md
@@ -32,9 +32,13 @@
 - 《Shell编程从入门到精通》（中）张晓春
 - 《Java并发编程实战》(美）Brian Goetz
 - 《高性能Java》（美）charlie hunt
+- 《Java开发手册》（中）杨冠宝
+
+### Spring
+
 - 《Spring JPA 从入门到精通》（中）张振华
 - 《Spring揭秘》（中）王福强　
-- 《Java开发手册》（中）杨冠宝
+- 《Spring Cloud微服务实战》（中）翟永超
 
 ### 前端
 
