--- a/书籍.md
+++ b/书籍.md
@@ -22,6 +22,7 @@
 - 《五分钟玩转kubernetes》（中）loudMan
 - 《Kubernetes权威指南》
 - 《Kafka权威指南》Neha Narkhede
+- 《ZooKeeper-分布式过程协同技术详解》（英）Flavio Junqueir
 
 ### Java
 
