--- a/书籍.md
+++ b/书籍.md
@@ -52,6 +52,10 @@
 - 《Vue.js实战》（中）尤雨溪
 - 《CSS权威指南》（美） Eric A.Meyer A.Meyer
 
+### 移动端
+
+- 《疯狂Android讲义（Kotlin版） （中） 李刚
+
 ### 数据库
 
 - 《SQL必知必会》(英)福塔
