--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -5,3 +5,26 @@
 ### 排序算法
 
 - [![wEuFrd.jpg](https://s1.ax1x.com/2020/09/05/wEuFrd.jpg)](https://imgchr.com/i/wEuFrd)
+
+## 进制转换
+
+### N进制转十进制
+
+- 按位数展开，例如 37FACH转十进制，3\*16^4+7\*16^3+15\*16^2+10*16+12
+
+### 十进制转N进制
+
+- 除N整的逆序
+
+### 原码、反码、补码
+
+- 原码
+  - 正数本身
+  - 负数本身
+- 反码
+  - 正数本身
+  - 负数符号位不变，其余取反
+- 补码
+  - 正数本身
+  - 负数反码+1
+
