--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -28,3 +28,30 @@
   - 正数本身
   - 负数反码+1
 
+## 计算机基础
+
+### CPU
+
+- CPU依据指令周期的不同阶段来区分在内存中以二进制编码形式存放的指令和数据
+- 从内存读取指令操作码，首先要将程序计数器内容送到地址总线上
+
+### 校验
+
+- 海明码纠错：n=数据位 k=校验位 2k次方-1 >= n + k
+
+### 指令执行时间
+
+- 流水线：所有阶段完整时间+最长阶段 * （指令数 - 1）
+
+## 版权
+
+- 商标权的保护期限是可以延长的
+
+## 软件设计基础
+
+### 结构化设计
+
+- 体系结构设计：定义软件的主要结构及其元素
+- 数据设计：基于实体联系图确定软件涉及的文件系统的结构及数据库的表结构
+- 接口设计：各个模块之间的接口
+  - 过程设计：确定算法和数据结构
