--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -6,27 +6,30 @@
 
 - [![wEuFrd.jpg](https://s1.ax1x.com/2020/09/05/wEuFrd.jpg)](https://imgchr.com/i/wEuFrd)
 
+## 数据结构
+
+### 图
+
+- 完全连通无向图的边数，`m=n*(n-1)/2`
+
 ## 进制转换
 
-### N进制转十进制
+- N进制转十进制
+  - 按位数展开，例如 37FACH转十进制，3\*16^4+7\*16^3+15\*16^2+10*16+12
 
-- 按位数展开，例如 37FACH转十进制，3\*16^4+7\*16^3+15\*16^2+10*16+12
+- 十进制转N进制
+  - 除N取整的逆序
 
-### 十进制转N进制
-
-- 除N整的逆序
-
-### 原码、反码、补码
-
-- 原码
-  - 正数本身
-  - 负数本身
-- 反码
-  - 正数本身
-  - 负数符号位不变，其余取反
-- 补码
-  - 正数本身
-  - 负数反码+1
+- 原码、反码、补码
+  - 原码
+    - 正数本身
+    - 负数本身   
+  - 反码
+    - 正数本身
+    - 负数符号位不变，其余取反
+  - 补码
+    - 正数本身
+    - 负数反码+1
 
 ## 计算机基础
 
@@ -34,6 +37,7 @@
 
 - CPU依据指令周期的不同阶段来区分在内存中以二进制编码形式存放的指令和数据
 - 从内存读取指令操作码，首先要将程序计数器内容送到地址总线上
+- 算术运算喝逻辑运算时，将结果暂存至累加器
 
 ### 校验
 
@@ -46,6 +50,7 @@
 ## 版权
 
 - 商标权的保护期限是可以延长的
+- 烟草制品必须注册商标
 
 ## 软件设计基础
 
@@ -54,4 +59,57 @@
 - 体系结构设计：定义软件的主要结构及其元素
 - 数据设计：基于实体联系图确定软件涉及的文件系统的结构及数据库的表结构
 - 接口设计：各个模块之间的接口
-  - 过程设计：确定算法和数据结构
+- 过程设计：确定算法和数据结构
+
+### 软件过程模型
+
+- 螺旋模型
+  - **<u>风险驱动过程模型</u>**，需要开发人员具有丰富的风险评估知识和经验，以此避免过多的测试 **<u>不适用于大型开发</u>**
+
+### 敏捷开发
+
+- 极限编程（XP）
+  - **<u>反复迭代小模块，反复测试</u>**，共享代码的所有权，不断反馈
+
+### 模块内聚
+
+- 偶然内聚
+  - 如果一个模块的各成分之间毫无关系，则称为偶然内聚，也就是说模块完成一组任务，这些任务之间的关系松散，实际上没有什么联系。
+
+- 逻辑内聚
+  - 几个逻辑上相关的功能被放在同一模块中，则称为[逻辑内聚](https://baike.baidu.com/item/逻辑内聚/7851934)。如一个模块读取各种不同类型外设的输入。尽管逻辑内聚比偶然内聚合理一些，但逻辑内聚的模块各成分在功能上并无关系，即使局部功能的修改有时也会影响全局，因此这[类模块](https://baike.baidu.com/item/类模块)的修改也比较困难。
+
+- 时间内聚
+  - 如果一个模块完成的功能必须在同一时间内执行（如[系统初始化](https://baike.baidu.com/item/系统初始化)），但这些功能只是因为时间因素关联在一起，则称为时间内聚。
+
+- 过程内聚
+  - 构件或者操作的组合方式是，允许在调用前面的构件或操作之后，马上调用后面的构件或操作，即使两者之间没有数据进行传递。模块完成多个需要按一定的步骤一次完成的功能。（过程相关---[控制耦合](https://baike.baidu.com/item/控制耦合/4137015)）。例如：在用[程序流程图](https://baike.baidu.com/item/程序流程图/8996271)设计模块时，若将程序流程图中的一部分划出各自组成模块，便形成[过程内聚](https://baike.baidu.com/item/过程内聚/1106061)。
+
+- 通信内聚（信息内聚）
+  - 如果一个模块的所有成分都操作同一数据集或生成同一数据集，则称为通信内聚。模块完成多个功能，各个功能都在同一数据结构上操作，这个模块的所有功能都是基于同一个数据结构（[符号表](https://baike.baidu.com/item/符号表)），因此，它是一个信息内聚的模块。
+
+- 顺序内聚
+  - 如果一个模块的各个成分和同一个功能密切相关，而且一个成分的输出作为另一个成分的输入，则称为[顺序内聚](https://baike.baidu.com/item/顺序内聚/7851969)。
+
+- 功能内聚
+  - 模块的所有成分对于完成单一的功能都是必须的，则称为[功能内聚](https://baike.baidu.com/item/功能内聚/7852047)。
+
+## UML
+
+### 状态图
+
+## 密码学
+
+### 加密算法
+
+- RSA非对称加密算法，管理密钥和分发
+- SHA-1安全散列算法，产生固定长度输出
+- MD5报文摘要
+- RC5明文加密，适用于大量明文加密传输
+
+### 证书认证
+
+- 建立TCP
+- 服务端发送包含公钥的证书
+- 客户端验证证书，发送一串由服务端加密的对称密钥
+- 服务端私钥解密，双方用对称密钥开始传输数据
