--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -51,6 +51,7 @@
 
 - 商标权的保护期限是可以延长的
 - 烟草制品必须注册商标
+- 在工作期间撰写文档，著作权属于公司
 
 ## 软件设计基础
 
@@ -113,3 +114,13 @@
 - 服务端发送包含公钥的证书
 - 客户端验证证书，发送一串由服务端加密的对称密钥
 - 服务端私钥解密，双方用对称密钥开始传输数据
+
+## 计算机网络
+
+### 被动攻击
+
+### 主动攻击
+
+- Dos
+- DDoS
+- 信息篡改、资源使用、欺骗、伪装
