--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -95,6 +95,10 @@
 - 功能内聚
   - 模块的所有成分对于完成单一的功能都是必须的，则称为[功能内聚](https://baike.baidu.com/item/功能内聚/7852047)。
 
+### 耦合类型
+
+- [详解](https://baike.baidu.com/item/%E8%80%A6%E5%90%88%E6%80%A7)
+
 ## UML
 
 ### 状态图
