--- a/软考复习总结.md
+++ b/软考复习总结.md
@@ -37,7 +37,7 @@
 
 - CPU依据指令周期的不同阶段来区分在内存中以二进制编码形式存放的指令和数据
 - 从内存读取指令操作码，首先要将程序计数器内容送到地址总线上
-- 算术运算喝逻辑运算时，将结果暂存至累加器
+- 算术运算和逻辑运算时，将结果暂存至累加器
 
 ### 校验
 
@@ -52,6 +52,7 @@
 - 商标权的保护期限是可以延长的
 - 烟草制品必须注册商标
 - 在工作期间撰写文档，著作权属于公司
+  - 署名权保护期不受限制 
 
 ## 软件设计基础
 
